--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "events": "^2.0.0",
         "flux": "^3.1.3",
         "laravel-mix": "^2.0.0",
+        "lodash": "^4.17.11",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-icons-kit": "^1.2.0",
         "react-transition-group": "^2.4.0",
         "webpack": "^3.11.0",
         "webpack-dev-server": "^1.14.1",
